<resources>
    <string name="app_name">Subscriber1DApp</string>
    <!-- Shared preferences keys -->
    <string name="login_key">com.ft4sua.sutdapp1d.login_key</string>
    <string name="subscriptions_key">com.ft4sua.sutdapp1d.subscriptions_key</string>
    <!-- Database version -->
    <string name="eventsVer_key">eventsVer_key</string>

    <!-- Strings in main -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- NavBar items -->
    <string name="nav_welcome">Welcome,</string>
    <string name="student_name">Student Name</string>
    <string name="nav_event_manager">Event Manager</string>
    <string name="nav_subs_events">Subscriptions and Events</string>
    <string name="nav_sync_timetable">Sync Class Timetable</string>
    <string name="nav_syncMyPortal">Sync</string>
    <string name="nav_calendar">Calendar</string>


    <!-- Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_id">This id is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>

    <!-- Event details -->
    <string name="title_activity_add_event">Add Event</string>
    <string name="event_name">Event</string>
    <string name="event_venue">Venue</string>
    <string name="event_details">Details</string>
    <string name="select_date">Select Date</string>
    <string name="event_admin">Admin ID</string>
    <string name="event_date">Event Date</string>
    <string name="select">Select Event Type</string>
    <string name="event_time">Event Time</string>
    <string name="select_start_time">Start Time</string>
    <string name="select_end_time">End Time</string>
    <!-- Event Type -->
    <string-array name="event_type">
        <item>Fifth Row</item>
        <item>Ad Hoc</item>
    </string-array>

    <!-- Event Manager ( RecyclerView and expandable items ) -->
    <string name="event_type">Event Type</string>
    <string name="duration">Start Time - End Time</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="title_activity_subs_events">SubsEventsActivity</string>
    <string name="sub_tab_title">Subscriptions</string>
    <string name="event_tab_title">Events</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firebase_flag">push_to_firebase</string>
    <string name="id_extra">id_cursor</string>
    <string name="title_activity_edit_event">Edit Event</string>


</resources>
