<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event_manager"
            android:title="@string/nav_event_manager" />
        <item
            android:id="@+id/nav_subs_events"
            android:title="@string/nav_subs_events" />

    </group>

    <item android:title="@string/nav_sync_timetable">
        <menu>
            <item
                android:id="@+id/nav_sync_timetable"
                android:icon="@drawable/ic_sync_black_24dp"
                android:title="@string/nav_syncMyPortal" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:title="@string/action_logout"
                app:showAsAction="never"
                />
        </menu>
    </item>

</menu>
