<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/expand_padding">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/expand_padding"
        >
        <TextView
            android:id="@+id/card_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="@dimen/event_name_text_size"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/card_event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_event_name"
            android:maxLines="1"
            android:text="@string/event_type"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />

        <TextView
            android:id="@+id/card_event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_event_type"
            android:maxLines="1"
            android:text="@string/event_date"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />

        <TextView
            android:id="@+id/card_event_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_event_date"
            android:maxLines="1"
            android:text="@string/event_time"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />
        <TextView
            android:id="@+id/card_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_event_date"
            android:layout_toEndOf="@id/card_event_starttime"
            android:maxLines="1"
            android:text= " - "
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />
        <TextView
            android:id="@+id/card_event_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_event_date"
            android:layout_toEndOf="@id/card_dash"
            android:maxLines="1"
            android:text="@string/event_time"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />
        <TextView
            android:id="@+id/card_event_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_event_starttime"
            android:maxLines="1"
            android:text="@string/event_venue"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />

        <ImageButton
            android:id="@+id/card_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_event_venue"
            android:layout_toStartOf="@id/card_edit"
            android:padding="8dp"
            android:src="@drawable/ic_delete_black"
            android:tint="@color/darkGray"
            android:background="@android:color/transparent"/>
        <ImageButton
            android:id="@+id/card_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_event_venue"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:src="@drawable/ic_edit_black"
            android:tint="@color/darkGray"
            android:background="@android:color/transparent"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>