<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/expand_padding"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/expand_padding">

        <TextView
            android:id="@+id/excard_event_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/event_type"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />

        <TextView
            android:id="@+id/excard_event_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/excard_event_type"
            android:maxLines="1"
            android:text="@string/event_time"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />
        <TextView
            android:id="@+id/excard_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/excard_event_type"
            android:layout_toEndOf="@id/excard_event_starttime"

            android:maxLines="1"
            android:text= " - "
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />
        <TextView
            android:id="@+id/excard_event_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/excard_event_type"
            android:layout_toEndOf="@id/excard_dash"
            android:maxLines="1"
            android:text="@string/event_time"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />
        <TextView
            android:id="@+id/excard_event_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/excard_event_starttime"
            android:maxLines="1"
            android:text="@string/event_venue"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/detail_text_size" />
        <ImageButton
            android:id="@+id/excard_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/excard_event_venue"
            android:layout_toStartOf="@id/excard_edit"
            android:padding="8dp"
            android:src="@drawable/ic_delete_black"
            android:tint="@color/darkGray"
            android:background="@android:color/transparent"/>
        <ImageButton
            android:id="@+id/excard_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/excard_event_venue"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:src="@drawable/ic_edit_black"
            android:tint="@color/darkGray"
            android:background="@android:color/transparent"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>