<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >
    <ImageView
        android:id="@+id/loginBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sutd_bg_vert"
        android:scaleType="centerCrop"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@color/colorDarkTransparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ft4sua.sutdapp1d.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/login_logo"
                    android:layout_height="@dimen/login_logo"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/app_logo_w"
                    android:tint="@android:color/white"
                    />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/nav_header_vertical_spacing">

                    <AutoCompleteTextView
                        android:id="@+id/studentID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_id"
                        android:inputType="numberDecimal"
                        android:maxLength="7"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="@drawable/rounded_edittext"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="5dp"
                        android:completionThreshold="1"
                        android:imeOptions="actionNext"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="1"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:background="@drawable/rounded_edittext"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"

                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/lightGray"
                    android:background="@color/colorDarkTransparent"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>

